--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 :root{
     --primary-color: #ffffff;
     --primary-color-highlight: #090404;
-    --bs-body-bg: #dbdada;
+    --bs-body-bg: #ffffff;
     --bs-body-font-family: 'Montserrat','Yeon Sung', sans-serif;
 
 
@@ -32,8 +32,31 @@ a:hover{color: var(--primary-color-);}
     .container-custom {width: 1520px;}
     }
 
+
+
+
 /*
-* Main Heared
+* navbar
+*/
+
+.nav-colored{
+    background-color: #090404;
+}
+.nav-transparent{
+    background-color: transparent;
+}
+.MeanyNavTrs{
+transition: 1s;
+-webkit-transition: 1s;
+}
+
+.padding-navbar {
+    padding-bottom: 35px !important;
+}
+
+
+/*
+* Main Header
 */
 .header{
     z-index: 2;
@@ -115,4 +138,50 @@ opacity: 0.8;
     to{
         transform: translateY(-20px);
     }
+}
+
+
+/*
+* steps section
+*/
+
+.steps{
+
+padding-top: 40px;
+padding-bottom: 40px;
+
+}
+
+
+.steps_section-thumbnail{
+    height: 250px;
+    object-fit: cover;
+    margin: 0 auto;
+    
+}
+
+.steps--background{
+   background-color: #f6f6f6;
+}
+
+
+@media (min-width: 544px) {
+
+    .steps{
+
+        padding-top: 80px;
+        padding-bottom: 80px;
+        
+        }
+
+.steps_section-thumbnail{
+    height: auto;
+    
+}
+}
+
+.steps__content-width{
+    max-width: 456;
+    margin: 0 auto;
+
 }
